Enhance account management UI: add TabPane for account tabs, bind totals rows to columns, and update layout in BudgetViewController and budget-view.fxml